# CSCI-445

./: .gitignore  login.txt
Basic Motor Control/: bettersonar.cpp  bettersonarpid.cpp  login.txt  motor_info.txt  servomotor.cpp  servomotorbetter.cpp  servospeed.cpp  sonar.cpp  testservo.cpp
Lab7/: CMakeLists.txt  Lab7.rtf  ParticleFilter  test.cpp
Lab8/: Makefile  Particle2.h  Util2.h  test.cpp
Lab8/Lab8/: CMakeLists.txt  Lab8Pseudo.cpp  Makefile  ParticleFilter  Util_Map.h  map_origin.txt  test(WASD).cpp  test.cpp  testWallFollow.cpp
ParticleFilter/: CMakeLists.txt  Makefile  Particle2.h  ParticleFilter  ParticleFilterfromiLab.mov  Util2.h  Util_Map.h  test.cpp  test2.cpp
TestMotor/: CMakeCache.txt  CMakeLists.txt  Makefile  TestMotor  cmake_install.cmake  testservo.cpp
TestServo/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  testservo.cpp
TestTurning/: Makefile  TestServo  testservo.cpp
